2001-07-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* goops/util.scm: Updated copyright notice.

2001-07-17  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* goops/save.scm: Use `re-export' instead of `export' when
	re-exporting `make-unbound'.

2001-06-05  Marius Vollmer  <mvo@zagadka.ping.de>

	* goops.scm: Use `re-export' instead of `export' when re-exporting
	`class-of'.

2001-05-19  Marius Vollmer  <mvo@zagadka.ping.de>

	* goops.scm: Call `%init-goops-builtins' instead of using the
	`(oop goops goopscore)' module.

2001-05-10  Marius Vollmer  <mvo@zagadka.ping.de>

	* goops/compile.scm (compile-method): Insert comment that
	`procedure-source' can not be guaranteed to be reliable or
	efficient.

2001-05-05  Marius Vollmer  <mvo@zagadka.ping.de>

	* goops.scm (initialize-object-procedure): Use
	`valid-object-procedure?' instead of explicit tag magic.
	(object-procedure-tags): Removed.
	
	* goops/util.scm (top-level-env): Use `current-module' instead of
	the deprecated *top-level-lookup-closure*.

2001-04-28  Rob Browning  <rlb@cs.utexas.edu>

	* goops/save.scm (write-readably): rename list* to cons*.

	* goops.scm (method): rename list* to cons*.

2001-04-10  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* goops/Makefile.am, goops/goopscore.scm: Reverted changes of
	2001-04-03, 2001-03-09.

2001-04-03  Keisuke Nishida  <kxn30@po.cwru.edu>

	* goops/Makefile.am (goops_sources): Include goopscore.scm.
	Thanks to Dale P. Smith.

2001-03-29  Keisuke Nishida  <kxn30@po.cwru.edu>

	* goops/goopscore.scm: New file.

2001-03-09  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* goops.scm (define-method): Only accept new syntax.

	* Makefile.am: Added old-define-method.scm.

	* goops/old-define-method.scm: New file.
	
	* goops.scm, goops/save.scm, goops/composite-slot.scm,
	goops/active-slot.scm: Use new method syntax.

2001-03-04  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* goops/compile.scm (compile-method): Tag method closure for body
	expansion.
