@@ -53,9 +53,8 @@
 (define-module (oop goops describe)
   :use-module (oop goops)
   :use-module (ice-9 session)
-  :use-module (ice-9 format))
-
-(export describe)			; Export the describe generic function
+  :use-module (ice-9 format)
+  :export (describe))			; Export the describe generic function
 
 ;;;
 ;;; describe for simple objects
