@@ -1,3 +1,12 @@
+2001-10-18  Mikael Djurfeldt  <mdj@linnaeus>
+
+	* goops.scm, goops/active-slot.scm, goops/compile.scm,
+	goops/composite-slot.scm, goops/describe.scm, goops/dispatch.scm,
+	goops/old-define-method.scm, goops/save.scm, goops/util.scm: Move
+	module the system directives `export', `export-syntax',
+	`re-export' and `re-export-syntax' into the `define-module' form.
+	This is the recommended way of exporting bindings.
+
 2001-07-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
 
 	* goops/util.scm: Updated copyright notice.
